--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,17 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  font_awesome_flutter: ^10.8.0
+  url_launcher: ^6.3.1
+  provider: ^6.1.5
+  bloc: ^9.0.0
+  google_fonts: ^6.2.1
+  collection: ^1.19.1
+  freezed_annotation: ^3.0.0
+  json_annotation: ^4.9.0
+  logging: ^1.3.0
+  shared_preferences: ^2.5.3
+  hive: ^2.2.3
 
 dev_dependencies:
   flutter_test:
@@ -45,6 +56,9 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^5.0.0
+  build_runner: ^2.4.15
+  freezed: ^3.0.6
+  json_serializable: ^6.9.5
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -58,9 +72,11 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+#    - images/a_dot_burr.jpeg
+#    - images/a_dot_ham.jpeg
+    - assets/licenses/
+    - assets/images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
